[gd_scene load_steps=12 format=2]

[ext_resource path="res://DogBody.gd" type="Script" id=1]
[ext_resource path="res://DogInteractionArea.gd" type="Script" id=2]
[ext_resource path="res://assets/Image60000.png" type="Texture" id=3]
[ext_resource path="res://DogSprite.gd" type="Script" id=4]
[ext_resource path="res://MouseCamera.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/jump.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/land.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/bump.wav" type="AudioStream" id=8]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 1, 1 )

[sub_resource type="SphereShape" id=2]

radius = 2.0

[sub_resource type="SpatialMaterial" id=3]

render_priority = 0
flags_transparent = true
flags_unshaded = true
flags_vertex_lighting = true
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 3
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 1
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 1, 1, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo", "Ambient Occlusion", "Anisotropy", "Clearcoat", "Depth", "Distance Fade", "Flags", "Metallic", "Parameters", "Proximity Fade", "Rim", "Roughness", "UV2", "Vertex Color" ]

[node name="Player" type="KinematicBody" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.14603, 4.21971 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="." index="0"]

transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="InteractionArea" type="Area" parent="." index="1"]

editor/display_folded = true
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
script = ExtResource( 2 )
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea" index="0"]

shape = SubResource( 2 )
disabled = false

[node name="Sprite3D" type="Sprite3D" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.135961, 0 )
layers = 1
material_override = SubResource( 3 )
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
centered = true
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.08
axis = 2
transparent = true
shaded = true
double_sided = true
alpha_cut = 2
texture = ExtResource( 3 )
vframes = 2
hframes = 4
frame = 0
region_enabled = false
region_rect = Rect2( 0, 0, 0, 0 )
script = ExtResource( 4 )
_sections_unfolded = [ "Animation", "Flags", "Geometry", "Pause", "Region", "Transform", "Visibility" ]

[node name="Lights" type="Spatial" parent="." index="3"]

[node name="The Sun" type="DirectionalLight" parent="Lights" index="0"]

transform = Transform( 0.518659, -0.792414, 0.321047, 0.0896381, 0.423831, 0.901295, -0.85027, -0.438686, 0.290854, -1.34166, 11.0755, -0.0898085 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0.552941, 0.552941, 0.552941, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 1.0
directional_shadow_split_2 = 0.5
directional_shadow_split_3 = 1.0
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Directional Shadow", "Light", "Shadow" ]

[node name="The Sun2" type="DirectionalLight" parent="Lights" index="1"]

transform = Transform( 0.491622, -0.0240315, -0.870477, 0.699153, -0.585023, 0.411013, -0.519128, -0.810659, -0.27081, -8.93561, 6.39808, -2.53809 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 0.25
light_indirect_energy = 0.25
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0.552941, 0.552941, 0.552941, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 1.0
directional_shadow_split_2 = 0.5
directional_shadow_split_3 = 1.0
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Directional Shadow", "Light", "Shadow" ]

[node name="TheCamera" type="Spatial" parent="." index="4"]

transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0 )
script = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera" parent="TheCamera" index="0"]

transform = Transform( 0.999998, -1.19209e-07, 5.96046e-08, 0, 0.730189, 0.683244, -2.98023e-08, -0.683244, 0.730187, 0, 10, 10 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 65.0
size = 20.0
near = 0.1
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="JumpSound" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 6 )
volume_db = -25.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="LandSound" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 7 )
volume_db = -30.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="BumpSound" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 8 )
volume_db = -30.0
autoplay = false
mix_target = 0
bus = "Master"


